fixed explore button on the homepage

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -21919,7 +21919,8 @@ html:not(.ie8) .stats-highlight img {
   text-decoration: underline !important;
 }
 
-.underline-hover:hover, .underline-hover:focus {
+.underline-hover:hover,
+.underline-hover:focus {
   text-decoration: underline !important;
 }
 
@@ -21932,7 +21933,8 @@ html:not(.ie8) .stats-highlight img {
   text-decoration: none !important;
 }
 
-.underline-hover-text-color:hover, .underline-hover-text-color:focus {
+.underline-hover-text-color:hover,
+.underline-hover-text-color:focus {
   background-image: linear-gradient(to right, #111111 50%, transparent 50%);
   background-repeat: repeat-x;
   background-size: 2px 1px;
@@ -21950,7 +21952,8 @@ html:not(.ie8) .stats-highlight img {
   text-decoration: none !important;
 }
 
-.underline-hover-white:hover, .underline-hover-white:focus {
+.underline-hover-white:hover,
+.underline-hover-white:focus {
   background-image: linear-gradient(to right, #fff 50%, transparent 50%);
   background-repeat: repeat-x;
   background-size: 2px 1px;
@@ -21968,7 +21971,8 @@ html:not(.ie8) .stats-highlight img {
   text-decoration: none !important;
 }
 
-.underline-hover-black:hover, .underline-hover-black:focus {
+.underline-hover-black:hover,
+.underline-hover-black:focus {
   background-image: linear-gradient(to right, #000 50%, transparent 50%);
   background-repeat: repeat-x;
   background-size: 2px 1px;
@@ -22250,7 +22254,8 @@ html:not(.ie8) .stats-highlight img {
   color: #000 !important;
 }
 
-.color-black-hover:hover, .color-black-hover:focus {
+.color-black-hover:hover,
+.color-black-hover:focus {
   color: #000 !important;
 }
 
@@ -22258,15 +22263,18 @@ html:not(.ie8) .stats-highlight img {
   color: #fff !important;
 }
 
-.color-white-hover:hover, .color-white-hover:focus {
+.color-white-hover:hover,
+.color-white-hover:focus {
   color: #fff !important;
 }
 
-.color-gray-dark, .color-grey-dark {
+.color-gray-dark,
+.color-grey-dark {
   color: #111111;
 }
 
-.color-gray, .color-grey {
+.color-gray,
+.color-grey {
   color: #555555;
 }
 
@@ -22302,11 +22310,13 @@ html:not(.ie8) .stats-highlight img {
   background-color: #d6d6d6 !important;
 }
 
-.bg-grey-light-hover:hover, .bg-grey-light-hover:focus {
+.bg-grey-light-hover:hover,
+.bg-grey-light-hover:focus {
   background-color: #d6d6d6 !important;
 }
 
-.bg-grey-light-hover-darker:hover, .bg-grey-light-hover-darker:focus {
+.bg-grey-light-hover-darker:hover,
+.bg-grey-light-hover-darker:focus {
   background-color: #cccccc !important;
 }
 
@@ -22314,12 +22324,18 @@ html:not(.ie8) .stats-highlight img {
   background-color: whitesmoke !important;
 }
 
-.bg-grey-lightest-hover:hover, .bg-grey-lightest-hover:focus {
+.bg-grey-lightest-hover:hover,
+.bg-grey-lightest-hover:focus {
   background-color: whitesmoke !important;
 }
 
-.bg-grey-lightest-hover-darker:hover, .bg-grey-lightest-hover-darker:focus {
+.bg-grey-lightest-hover-darker:hover,
+.bg-grey-lightest-hover-darker:focus {
   background-color: #ebebeb !important;
+}
+
+.bg-none {
+  background: none;
 }
 
 .bg-alpha-40 {
@@ -22349,7 +22365,8 @@ html:not(.ie8) .stats-highlight img {
 /*------------------------------------
   borders colors and styles
 ------------------------------------*/
-.brd-white-before::before, .brd-white-after::after {
+.brd-white-before::before,
+.brd-white-after::after {
   border-color: #fff !important;
 }
 
@@ -22365,11 +22382,13 @@ html:not(.ie8) .stats-highlight img {
   border-color: #555555 !important;
 }
 
-.brd-gray-light-before::before, .brd-gray-light-after::after {
+.brd-gray-light-before::before,
+.brd-gray-light-after::after {
   border-color: #ddd !important;
 }
 
-.brd-transparent-before::before, .brd-transparent-after::after {
+.brd-transparent-before::before,
+.brd-transparent-after::after {
   border-color: transparent !important;
 }
 
@@ -22393,32 +22412,44 @@ html:not(.ie8) .stats-highlight img {
   border-bottom: solid 1px;
 }
 
-.brd-dotted-1, .brd-dotted-1-before::before, .brd-dotted-1-after::after {
+.brd-dotted-1,
+.brd-dotted-1-before::before,
+.brd-dotted-1-after::after {
   border-width: 1px;
   border-style: dotted;
 }
 
-.brd-solid-1, .brd-solid-1-before::before, .brd-solid-1-after::after {
+.brd-solid-1,
+.brd-solid-1-before::before,
+.brd-solid-1-after::after {
   border-width: 1px !important;
   border-style: solid !important;
 }
 
-.brd-solid-2, .brd-solid-2-before::before, .brd-solid-2-after::after {
+.brd-solid-2,
+.brd-solid-2-before::before,
+.brd-solid-2-after::after {
   border-width: 2px !important;
   border-style: solid !important;
 }
 
-.brd-solid-3, .brd-solid-3-before::before, .brd-solid-3-after::after {
+.brd-solid-3,
+.brd-solid-3-before::before,
+.brd-solid-3-after::after {
   border-width: 3px !important;
   border-style: solid !important;
 }
 
-.brd-solid-4, .brd-solid-4-before::before, .brd-solid-4-after::after {
+.brd-solid-4,
+.brd-solid-4-before::before,
+.brd-solid-4-after::after {
   border-width: 4px !important;
   border-style: solid !important;
 }
 
-.brd-solid-5, .brd-solid-5-before::before, .brd-solid-5-after::after {
+.brd-solid-5,
+.brd-solid-5-before::before,
+.brd-solid-5-after::after {
   border-width: 5px !important;
   border-style: solid !important;
 }
@@ -22839,12 +22870,13 @@ html:not(.ie8) .stats-highlight img {
   line-height: 1.6em !important;
 }
 
-.bold, .text-bold {
+.bold,
+.text-bold {
   font-weight: 700 !important;
 }
 
 .link-icon {
-  font-size: .7rem !important;
+  font-size: 0.7rem !important;
   position: relative;
   top: -3px;
   padding-left: 2px;
@@ -22917,8 +22949,12 @@ html:not(.ie8) .stats-highlight img {
 /*------------------------------------
   Transforms & Transitions
 ------------------------------------*/
-.transition-0_3, .transition-0_3:before, .transition-0_3:after, .transition-0_3 path, .transition-0_3 polygon {
-  transition-duration: .3s;
+.transition-0_3,
+.transition-0_3:before,
+.transition-0_3:after,
+.transition-0_3 path,
+.transition-0_3 polygon {
+  transition-duration: 0.3s;
   transition-property: all;
   transition-timing-function: ease;
   transition-delay: 0s;
