removed text-decoration from main menu links

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v6 -  @version v6.0.5 -  10/15/2021 
+ * CA State Template v6 -  @version v6.0.5 -  10/22/2021 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.6.0 - /source/scss/bootstrap/ 
@@ -14680,6 +14680,10 @@ table.gsc-search-box td {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+.second-level-nav a {
+  text-decoration: none;
 }
 
 .second-level-nav [class^="unit"] .second-level-link {
