--- a/source/scss/cagov/navigation.scss
+++ b/source/scss/cagov/navigation.scss
@@ -94,6 +94,9 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    a {
+        text-decoration: none;
+    }
 
     [class^="unit"] {
         .second-level-link {
