removed jumps from mobile search expand and collapse transitions

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -14463,6 +14463,11 @@ table.gsc-search-box td {
 #head-search {
   background: rgba(0, 0, 0, 0.5);
   opacity: 1;
+  padding: 0 !important;
+  transition: ease-in 0.3s;
+}
+
+#head-search .container {
   padding: 10px !important;
 }
 
