--- a/source/scss/cagov/search.scss
+++ b/source/scss/cagov/search.scss
@@ -867,7 +867,11 @@ table.gsc-search-box td {
 #head-search {
     background: rgba(0, 0, 0, 0.5);
     opacity: 1;
-    padding: 10px !important;
+    padding: 0 !important;
+    transition: ease-in 0.3s;
+    .container {
+        padding: 10px !important;
+    }
     .gsc-search-button {
         right: 50px !important;
         outline-offset: -2px;
