--- a/source/scss/cagov/utility-header.scss
+++ b/source/scss/cagov/utility-header.scss
@@ -10,7 +10,6 @@
     min-height: 38px; // beta 6.0 addition
     transition: all 0.3s ease;
 
-
     @media (max-width: $screen-xs-max) {
         min-height: 40px; // beta 6.0 addition
         .container {
@@ -44,7 +43,9 @@
         padding: 0;
         text-decoration: none;
 
-        &:hover, &:focus, &.hovered {
+        &:hover,
+        &:focus,
+        &.hovered {
             text-decoration: none;
         }
     }
@@ -69,7 +70,8 @@
                     font-size: 100% !important;
                 }
 
-                &:hover, &:focus {
+                &:hover,
+                &:focus {
                     color: lighten($color-p1, 25%);
                     background-color: transparent;
                     border: none;
@@ -102,7 +104,6 @@
     }
 
     @media (max-width: $screen-xs-max) {
-
         .social-media-links {
             li {
                 padding: 0 5px;
@@ -128,17 +129,14 @@
     }
 }
 
-
-.header-cagov-logo img { // Beta 5.0 addition
+.header-cagov-logo img {
+    // Beta 5.0 addition
     left: 27px;
 
     @media (max-width: $screen-md-max) {
         left: 5px;
     }
 }
-
-
-
 
 /* Utility header when using full width menu with icons */
 
@@ -168,10 +166,8 @@
     }
 }
 
-
 // Desktop view
 @media (min-width: $screen-sm-min) {
-
     .nav-full-width-icons .header-organization-banner a img {
         width: 100%;
         max-width: 300px;
@@ -189,17 +185,18 @@
         }
     }
 
-
     .nav-full-width-icons .settings-links {
         margin-top: -52px;
 
-        a, button {
+        a,
+        button {
             padding: 8px 10px 8px 10px;
             border: 1px solid #fff;
             border-radius: 3px;
             color: #fff;
 
-            &:hover, &:focus {
+            &:hover,
+            &:focus {
                 border: 1px solid #fff;
             }
         }
@@ -209,7 +206,6 @@
 // Mobile view
 @media (max-width: $screen-xs-max) {
     .nav-full-width-icons {
-
         .header-organization-banner img {
             width: 100%;
             max-width: 300px;
@@ -229,7 +225,8 @@
                 top: 20px;
                 z-index: 9;
 
-                a, button {
+                a,
+                button {
                     padding: 8px 10px 8px 10px;
                     border: 1px solid $color-p2;
                     border-radius: 3px;
@@ -248,7 +245,6 @@
     }
 }
 
-
 //
 // FLEX UTILITY
 // --------------------------------------------------
@@ -265,7 +261,6 @@
             align-items: center; // make items vertically centered
             .header-cagov-logo {
                 margin-right: 20px;
-                margin-left: 20px;
 
                 img {
                     left: 0;
@@ -274,7 +269,6 @@
 
                 @media (min-width: $screen-xs-max) and (max-width: $screen-sm-max) {
                     margin-right: 15px;
-                    margin-left: 15px;
                 }
 
                 @media (max-width: $screen-xs-max) {
@@ -291,12 +285,10 @@
             a {
                 margin: 0px 10px 0 10px;
 
-
                 @media (max-width: $screen-xs-max) {
                     margin: 4px 4px 0 4px;
                 }
             }
-
 
             @media (max-width: $screen-xs-max) {
                 [class^="ca-gov-icon-"] {
@@ -315,10 +307,7 @@
 
             a {
                 margin: 0 10px 0 10px;
-                font-size: .9em;
-
-
-
+                font-size: 0.9em;
 
                 @media (max-width: $screen-xs-max) {
                     margin: 0 4px 0 4px;
