--- a/source/scss/cagov/global-header.scss
+++ b/source/scss/cagov/global-header.scss
@@ -58,6 +58,8 @@
 
 .branding {
     @include container;
+    padding-left: 0;
+    padding-right: 0;
     position: relative;
 
     @media (min-width: $screen-md-min) {
