added accordion-list component

--- a/source/scss/cagov.core.scss
+++ b/source/scss/cagov.core.scss
@@ -59,6 +59,7 @@
 @import "cagov/alert-banner.scss";
 @import "cagov/tabs.scss";
 @import "cagov/accordion.scss";
+@import "cagov/accordion-list.scss";
 @import "cagov/breadcrumbs.scss";
 @import "cagov/keywords.scss";
 @import "cagov/horizontal-rules.scss";
