changed accordion list heading font to source sans

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -17801,6 +17801,7 @@ cagov-accordion.prog-enhanced .accordion-alpha .plus-minus {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
   padding-bottom: 0;
+  font-family: "Source Sans Pro", sans-serif;
 }
 
 .accordion__trigger {
