--- a/source/scss/cagov/accordion-list.scss
+++ b/source/scss/cagov/accordion-list.scss
@@ -35,6 +35,7 @@
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
   padding-bottom: 0;
+  font-family: $font-family-sans-serif;
 }
 
 .accordion__trigger {
