fixed duplicate id issue in search components

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -14168,30 +14168,30 @@ button.gsc-search-button {
 }
 
 /* ------------- Custom search box (not google) --------------*/
-.search-container #Search {
+.search-container .search-form {
   display: flex;
 }
 
-.search-container #Search .gsc-search-button {
+.search-container .search-form .gsc-search-button {
   right: 50px;
 }
 
-.search-container #Search .close-search-btn {
+.search-container .search-form .close-search-btn {
   display: block;
 }
 
-.search-container #Search .close-search {
+.search-container .search-form .close-search {
   font-size: 2rem;
   display: block;
   right: 0;
 }
 
-.search-container #Search .close-search .ca-gov-icon-close-mark {
+.search-container .search-form .close-search .ca-gov-icon-close-mark {
   color: whitesmoke;
 }
 
 @media (max-width: 991px) {
-  .search-container #Search .close-search {
+  .search-container .search-form .close-search {
     display: block;
   }
 }
@@ -14200,21 +14200,21 @@ button.gsc-search-button {
   padding: 0 !important;
 }
 
-.featured-search .container #Search .gsc-search-button {
+.featured-search .container .search-form .gsc-search-button {
   right: 0;
   outline-offset: -2px;
 }
 
-.featured-search .container #Search .close-search-btn {
+.featured-search .container .search-form .close-search-btn {
   display: none;
 }
 
-.featured-search.active .container #Search .gsc-search-button {
+.featured-search.active .container .search-form .gsc-search-button {
   right: 50px;
   outline-offset: -2px;
 }
 
-.featured-search.active .container #Search .close-search-btn {
+.featured-search.active .container .search-form .close-search-btn {
   display: block;
 }
 
@@ -14444,11 +14444,11 @@ table.gsc-search-box td {
   .gsc-search-button .ca-gov-icon-search {
     font-size: 34px !important;
   }
-  .search-container #Search .close-search {
+  .search-container .search-form .close-search {
     font-size: 34px !important;
     padding-left: 10px;
   }
-  .search-container #Search .gsc-search-button {
+  .search-container .search-form .gsc-search-button {
     padding-left: 10px;
     padding-right: 10px;
   }
