--- a/source/scss/cagov/search.scss
+++ b/source/scss/cagov/search.scss
@@ -547,7 +547,7 @@ button.gsc-search-button {
 
 /* ------------- Custom search box (not google) --------------*/
 .search-container {
-    #Search {
+    .search-form {
         display: flex;
 
         .gsc-search-button {
@@ -578,7 +578,7 @@ button.gsc-search-button {
     .container {
         padding: 0 !important;
 
-        #Search {
+        .search-form {
             .gsc-search-button {
                 right: 0;
                 outline-offset: -2px;
@@ -593,7 +593,7 @@ button.gsc-search-button {
 
 .featured-search.active {
     .container {
-        #Search {
+        .search-form {
             .gsc-search-button {
                 right: 50px;
                 outline-offset: -2px;
@@ -844,12 +844,12 @@ table.gsc-search-box td {
         font-size: 34px !important;
     }
 
-    .search-container #Search .close-search {
+    .search-container .search-form .close-search {
         font-size: 34px !important;
         padding-left: 10px;
     }
 
-    .search-container #Search .gsc-search-button {
+    .search-container .search-form .gsc-search-button {
         padding-left: 10px;
         padding-right: 10px;
     }
