--- a/source/scss/cagov.core.scss
+++ b/source/scss/cagov.core.scss
@@ -60,6 +60,7 @@
 @import "cagov/tabs.scss";
 @import "cagov/accordion.scss";
 @import "cagov/accordion-list.scss";
+@import "cagov/accordion-side-nav.scss";
 @import "cagov/breadcrumbs.scss";
 @import "cagov/keywords.scss";
 @import "cagov/horizontal-rules.scss";
