--- a/source/scss/cagov/type.scss
+++ b/source/scss/cagov/type.scss
@@ -2,7 +2,6 @@
    TYPE STYLES - /source/scss/cagov/type.scss
 ----------------------------------------- */
 
-
 body {
     font-family: $font-family-sans-serif;
     font-size: $font-size-base;
@@ -17,161 +16,203 @@ body {
     }
 }
 
-    a {
-        color: $link-color;
+a {
+    color: $link-color;
 
-        &:hover {
-            color: $link-hover-color;
-        }
+    &:hover {
+        color: $link-hover-color;
+    }
+}
+
+/* Solution for links that are behind fixed Header */
+#main-content a,
+#main-content button {
+    scroll-margin-top: 120px !important;
+}
+
+.featured-narrative {
+    border-bottom: 1px solid #d6d6d6;
+    border-top: 1px solid #d6d6d6;
+    padding: 10px 10px 0 10px;
+    margin-bottom: ($line-height-computed / 2);
+    margin-left: 20px;
+}
+
+//
+// TYPOGRAPHY
+// --------------------------------------------------
+
+p {
+    margin-bottom: 0.7rem;
+}
+
+.ie9 p {
+    + h1,
+    + h2,
+    + h3,
+    + h4 {
+        padding-top: 10px; // Add top padding back into ie9's headers
+    }
+}
+
+h1,
+.h1 {
+    //color: #c60; // Orange
+    span[class^="ca-gov-icon-"]:first-child {
+        display: none; // hide icon used in v4
+    }
+}
+
+// OVER RIDE BOOTSTRAP SIZES
+h1,
+.h1 {
+    @include font-size(2.4);
+    margin-top: 3rem;
+    margin-bottom: 1.6rem;
+    font-family: $headings-font-family;
+}
+
+h2,
+.h2 {
+    @include font-size(1.94);
+    margin-top: 2.7rem;
+    margin-bottom: 1.4rem;
+    font-family: $headings-font-family;
+}
+
+h3,
+.h3 {
+    @include font-size(1.54);
+    margin-top: 2.4rem;
+    margin-bottom: 1.2rem;
+    font-family: $headings-font-family;
+}
+
+h4,
+.h4 {
+    @include font-size(1.25);
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    font-family: $headings-font-family;
+}
+
+h5,
+.h5 {
+    @include font-size(1);
+    margin-top: 1.7rem;
+    margin-bottom: 0.8rem;
+    font-family: $headings-font-family;
+}
+
+h6,
+.h6 {
+    @include font-size(0.8);
+    margin-top: 1.4rem;
+    margin-bottom: 0.6rem;
+    font-family: $headings-font-family;
+}
+
+@media (max-width: $screen-xs-max) {
+    // LARGER HEADING SIZE FOR MOBILE
+    h1,
+    .h1 {
+        @include font-size(2.5);
     }
 
-    /* Solution for links that are behind fixed Header */
-    #main-content a, #main-content button {
-        scroll-margin-top: 120px !important;
+    h2,
+    .h2 {
+        @include font-size(2);
     }
 
-    .featured-narrative {
-        border-bottom: 1px solid #d6d6d6;
-        border-top: 1px solid #d6d6d6;
-        padding: 10px 10px 0 10px;
-        margin-bottom: ($line-height-computed / 2);
-        margin-left: 20px;
+    h3,
+    .h3 {
+        @include font-size(1.6);
     }
 
-    //
-    // TYPOGRAPHY
-    // --------------------------------------------------
-
-    p {
-        margin-bottom: 0.7rem;
+    h4,
+    .h4 {
+        @include font-size(1.3);
     }
+}
 
-    .ie9 p {
-        + h1, + h2, + h3, + h4 {
-            padding-top: 10px; // Add top padding back into ie9's headers
-        }
-    }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+    line-height: $headings-line-height;
+}
 
-    h1, .h1 {
-        //color: #c60; // Orange
-        span[class^="ca-gov-icon-"]:first-child {
-            display: none; // hide icon used in v4
-        }
-    }
-
-    // OVER RIDE BOOTSTRAP SIZES
-    h1, .h1 {
-        @include font-size(2.4);
-        margin-top: 3rem;
-        margin-bottom: 1.6rem;
-        font-family: $headings-font-family;
-    }
-
-    h2, .h2 {
+// ICON SIZING
+[class*="icon-"] {
+    &.big {
         @include font-size(1.94);
-        margin-top: 2.7rem;
-        margin-bottom: 1.4rem;
-        font-family: $headings-font-family;
     }
 
-    h3, .h3 {
-        @include font-size(1.54);
-        margin-top: 2.4rem;
-        margin-bottom: 1.2rem;
-        font-family: $headings-font-family;
+    &.bigger {
+        @include font-size(2.4);
     }
 
-    h4, .h4 {
-        @include font-size(1.25);
-        margin-top: 2rem;
-        margin-bottom: 1rem;
-        font-family: $headings-font-family;
+    &.biggest {
+        @include font-size(3.5);
     }
+}
 
-    h5, .h5 {
-        @include font-size(1);
-        margin-top: 1.7rem;
-        margin-bottom: .8rem;
-        font-family: $headings-font-family;
-    }
+.serif {
+    font-family: $font-family-serif !important;
+}
 
-    h6, .h6 {
-        @include font-size(0.8);
-        margin-top: 1.4rem;
-        margin-bottom: .6rem;
-        font-family: $headings-font-family;
-    }
+.monospace {
+    font-family: $font-family-monospace !important;
+}
 
-    @media (max-width: $screen-xs-max) {
-        // LARGER HEADING SIZE FOR MOBILE
-        h1, .h1 {
-            @include font-size(2.5);
-        }
+.heading {
+    font-family: $headings-font-family !important;
+}
 
-        h2, .h2 {
-            @include font-size(2);
-        }
+code {
+    color: $code-color;
+}
 
-        h3, .h3 {
-            @include font-size(1.6);
-        }
+// pre-wrap class
+.wrap {
+    white-space: normal !important;
+}
 
-        h4, .h4 {
-            @include font-size(1.3);
-        }
-    }
-
-    h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-        line-height: $headings-line-height;
-    }
-
-
-    // ICON SIZING
-    [class*="icon-"] {
-        &.big {
-            @include font-size(1.94);
-        }
-
-        &.bigger {
-            @include font-size(2.4);
-        }
-
-        &.biggest {
-            @include font-size(3.5);
-        }
-    }
-
-    .serif {
-        font-family: $font-family-serif !important;
-    }
-
-    .monospace {
-        font-family: $font-family-monospace !important;
-    }
-
-    .heading {
-        font-family: $headings-font-family !important;
-    }
-
-    code {
-        color: $code-color;
-    }
-
-    // pre-wrap class
-    .wrap {
-        white-space:normal !important;
-    }
-
-
-
-
-// LINKS NEED VISUAL INDICATORS OTHER THAN COLOR (USING UNDERLINE MIXING) 
+// LINKS NEED VISUAL INDICATORS OTHER THAN COLOR (USING UNDERLINE MIXING)
 .main-content {
     @include underline($link-color, $link-hover-color);
 }
 // UNDELINE EXEPTIONS
-.tab-group .nav-tabs
-li > a, .main-content .btn, .panel-title, .panel-heading a, .btn-more, .accordion .panel-heading a, .panel-group .panel-heading .panel-title a, .accordion .panel-heading .panel-title a, .panel-group .panel-heading .panel-title a, .service-tile-content .panel-heading .panel-title a, .service-tile-content .panel-heading a, .accordion .panel-heading a, .icon-link, .social a, .main-content a[role="button"], .main-content a[role="tab"], .gallery-item, .news-link, .news-icon, .socialsharer-container a, .thumbnail a, .explore-invite a {
+.tab-group .nav-tabs li > a,
+.main-content .btn,
+.panel-title,
+.panel-heading a,
+.btn-more,
+.accordion .panel-heading a,
+.panel-group .panel-heading .panel-title a,
+.accordion .panel-heading .panel-title a,
+.panel-group .panel-heading .panel-title a,
+.service-tile-content .panel-heading .panel-title a,
+.service-tile-content .panel-heading a,
+.accordion .panel-heading a,
+.icon-link,
+.social a,
+.main-content a[role="button"],
+.main-content a[role="tab"],
+.gallery-item,
+.news-link,
+.news-icon,
+.socialsharer-container a,
+.thumbnail a,
+.explore-invite a {
     text-decoration: none !important;
     background-image: none !important;
 }
@@ -188,8 +229,8 @@ li > a, .main-content .btn, .panel-title, .panel-heading a, .btn-more, .accordio
 }
 
 .list-group-item {
-    padding-top: ($spacer * .75) !important;
-    padding-bottom: ($spacer * .75) !important;
+    padding-top: ($spacer * 0.75) !important;
+    padding-bottom: ($spacer * 0.75) !important;
     padding-left: ($spacer * 1.25) !important;
     padding-right: ($spacer * 1.25) !important;
     margin-top: 0 !important;
@@ -206,26 +247,24 @@ a.list-group-item {
 
 /*dyslexic font*/
 
-
 @font-face {
-    font-family: 'OpenDyslexicAlta Regular';
-    src: url('../fonts/OpenDyslexicAlta-Regular.eat');
-    src: url('../fonts/OpenDyslexicAlta-Regular.eot#iefix') format('embedded-opentype'), url('../fonts/OpenDyslexicAlta-Regular.ttf') format('truetype'), url('../fonts/OpenDyslexicAlta-Regular.woff') format('woff'), url('../fonts/OpenDyslexicAlta-Regular.svg#OpenDyslexicAlta') format('svg');
+    font-family: "OpenDyslexicAlta Regular";
+    src: url("../fonts/OpenDyslexicAlta-Regular.eat");
+    src: url("../fonts/OpenDyslexicAlta-Regular.eot#iefix") format("embedded-opentype"),
+        url("../fonts/OpenDyslexicAlta-Regular.ttf") format("truetype"),
+        url("../fonts/OpenDyslexicAlta-Regular.woff") format("woff"),
+        url("../fonts/OpenDyslexicAlta-Regular.svg#OpenDyslexicAlta") format("svg");
     font-weight: normal;
-    font-style: normal
+    font-style: normal;
 }
 
-
 @font-face {
-    font-family: 'OpenDyslexic Regular';
-    src: url('../fonts/OpenDyslexic-Regular.eat');
-    src: url('../fonts/OpenDyslexic-Regular.eot#iefix') format('embedded-opentype'), url('../fonts/OpenDyslexic-Regular.ttf') format('truetype'), url('../fonts/OpenDyslexic-Regular.woff') format('woff'), url('../fonts/OpenDyslexic-Regular.svg#OpenDyslexicAlta') format('svg');
+    font-family: "OpenDyslexic Regular";
+    src: url("../fonts/OpenDyslexic-Regular.eat");
+    src: url("../fonts/OpenDyslexic-Regular.eot#iefix") format("embedded-opentype"),
+        url("../fonts/OpenDyslexic-Regular.ttf") format("truetype"),
+        url("../fonts/OpenDyslexic-Regular.woff") format("woff"),
+        url("../fonts/OpenDyslexic-Regular.svg#OpenDyslexicAlta") format("svg");
     font-weight: normal;
-    font-style: normal
+    font-style: normal;
 }
-
-
-
-
-
-
