updated cdn page

--- a/source/scss/cagov/accordion-list.scss
+++ b/source/scss/cagov/accordion-list.scss
@@ -119,8 +119,9 @@
 }
 
 .accordion__panel[aria-hidden="false"] {
-  max-height: 100vh;
+  max-height: 1000px;
   padding-left: 1em;
   overflow: auto;
   visibility: visible;
+  padding-bottom: 2rem;
 }
