--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v6 -  @version v6.0.6 -  10/29/2021 
+ * CA State Template v6 -  @version v6.0.6 -  11/12/2021 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.6.0 - /source/scss/bootstrap/ 
@@ -17930,10 +17930,11 @@ cagov-accordion.prog-enhanced .accordion-alpha .plus-minus {
 }
 
 .accordion__panel[aria-hidden="false"] {
-  max-height: 100vh;
+  max-height: 1000px;
   padding-left: 1em;
   overflow: auto;
   visibility: visible;
+  padding-bottom: 2rem;
 }
 
 /* -----------------------------------------
