--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -17652,10 +17652,10 @@ html {
 ----------------------------------------- */
 /* accordion component specific classes */
 cagov-accordion .cagov-accordion-card {
-  border-radius: .3rem !important;
+  border-radius: 0.3rem !important;
   margin-bottom: 0;
   min-height: 3rem;
-  margin-top: .5rem;
+  margin-top: 0.5rem;
   border: solid 1px #ededef !important;
 }
 
@@ -17670,7 +17670,7 @@ cagov-accordion button.accordion-card-header {
   align-items: center;
   padding: 0 0 0 1rem;
   background-clip: border-box;
-  background-color: #EDEDEF;
+  background-color: #ededef;
   border: none;
   position: relative;
   width: 100%;
@@ -17684,7 +17684,7 @@ cagov-accordion.prog-enhanced button.accordion-card-header {
 cagov-accordion .accordion-title {
   text-align: left;
   margin-bottom: 0;
-  color: var(--primary-color, #064E66);
+  color: var(--primary-color, #064e66);
   margin-right: auto;
   width: 90%;
   padding: 0 0.5rem 0 0 !important;
@@ -17723,12 +17723,12 @@ cagov-accordion .collapsed {
   margin-bottom: 0 !important;
   font-size: 1.2rem !important;
   font-weight: 700;
-  color: var(--primary-color, #064E66);
+  color: var(--primary-color, #064e66);
   text-align: left !important;
 }
 
 button.accordion-card-header:hover {
-  background-color: var(--hover-color, #F9F9FA);
+  background-color: var(--hover-color, #f9f9fa);
 }
 
 button.accordion-card-header:hover .accordion-title {
@@ -17753,13 +17753,12 @@ cagov-accordion.prog-enhanced .accordion-alpha .plus-minus {
   border: none;
   overflow: hidden;
   margin-left: 1rem;
-  color: var(--primary-color, #064E66);
+  color: var(--primary-color, #064e66);
   align-self: flex-start;
-  margin-top: 8px;
 }
 
 .prog-enhanced .accordion-alpha .plus-minus svg {
-  fill: var(--primary-color, #064E66);
+  fill: var(--primary-color, #064e66);
   width: 25px;
   height: 25px;
 }
