updated alert banner close button styles and structure

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -17378,6 +17378,12 @@ html {
   right: -5px;
   padding: 0 10px;
   text-shadow: none;
+  float: right;
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 1;
+  border: none;
+  background: none;
 }
 
 .alert-banner .container:after {
