--- a/source/scss/cagov/alert-banner.scss
+++ b/source/scss/cagov/alert-banner.scss
@@ -19,6 +19,12 @@
         right: -5px;
         padding: 0 10px;
         text-shadow: none;
+        float: right;
+        font-size: 1.5rem;
+        font-weight: 700;
+        line-height: 1;
+        border: none;
+        background: none;
     }
 
     .container:after {
@@ -33,7 +39,7 @@
     font-weight: bold;
     padding: 0 5px;
     margin: 0 5px;
-    @include font-size(.87);
+    @include font-size(0.87);
 
     [class^="ca-gov-icon-"] {
         margin-right: 3px;
@@ -43,36 +49,30 @@
 .alert-link {
     line-height: 1.2em;
     @include float-right();
-	font-weight:400;
+    font-weight: 400;
 }
 
 .alert-severe {
     background: $brand-highlight;
-    
+
     .close {
         color: $gray-base;
-		position:relative;
-		top:0;
-		right: -5px;
-		padding:0 10px;
-		text-shadow: none; 
+        position: relative;
+        top: 0;
+        right: -5px;
+        padding: 0 10px;
+        text-shadow: none;
     }
-	
-.alert-level {
+
+    .alert-level {
         color: $gray-base;
         background: rgba(0, 0, 0, 0.15);
-		}
-	
-	.alert-text {
-      color: $gray-base;
     }
-		
 
-
-
+    .alert-text {
+        color: $gray-base;
+    }
 }
-
-
 
 //
 // HIDE ALERTS AFTER PAGE SCROLLS & HEADER COMPACTS
@@ -80,6 +80,6 @@
 
 .global-header.compact {
     .alert-banner {
-        display:none;
+        display: none;
     }
-	}
+}
