--- a/source/scss/cagov/forms.scss
+++ b/source/scss/cagov/forms.scss
@@ -2,167 +2,161 @@
    FORMS - /source/scss/cagov/forms.scss
 ----------------------------------------- */
 
-
-.form-control, .custom-file-label, .custom-select {
+.form-control,
+.custom-file-label,
+.custom-select {
 	border-radius: $border-radius-base;
 	border-color: $input-border;
-	}
+}
 
-label, .form-control-label {
-	font-weight:700;
-	margin-bottom: .3rem;
-	}
+label,
+.form-control-label {
+	font-weight: 700;
+	margin-bottom: 0.3rem;
+}
 .input-group-text {
 	border-radius: $border-radius-base;
 	&.is-valid {
 		color: $brand-success;
 		border-color: $brand-success;
 		background-color: lighten($brand-success, 27%);
-		}
-		&.is-invalid {
+	}
+	&.is-invalid {
 		color: $brand-danger;
 		border-color: $brand-danger;
 		background-color: lighten($brand-danger, 40%);
-		}
 	}
-	.custom-file-label:after {
-		background-color: $color-p2;
-		color:$white;
-		border-radius: $border-radius-base;
-		font-weight:500;
-		}
-		// removeing default arrow on custom select input
-	.custom-select {
-		-webkit-appearance: none;
-		-moz-appearance: none;
-		appearance: none;
-		}
+}
+.custom-file-label:after {
+	background-color: $color-p2;
+	color: $white;
+	border-radius: $border-radius-base;
+	font-weight: 500;
+}
+// removeing default arrow on custom select input
+.custom-select {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+}
 
 // Asterisk
 .required-label {
-    color:$brand-danger;
+	color: $brand-danger;
 }
-
 
 // Idea for making inline forms appear to follow the grid.
 // Requires adding a group/row class outside of form for negative margins
 .form-inline-columns {
-    .form-group {
-        margin: 0 ($grid-gutter-width / 2);
-    }
+	.form-group {
+		margin: 0 ($grid-gutter-width / 2);
+	}
 }
-
 
 // beta 5.0 addtion
 .input-group {
 	display: flex;
-    position: relative;
-    width: 100%;
+	position: relative;
+	width: 100%;
 	.form-control {
-		
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		-moz-box-flex: 1;
 		-webkit-flex: 1;
-    	flex: 1 1 auto;
-		}
-	}
-// adding icon 
-.input-group-addon {
-  min-width: 38px;
-  background-color: transparent;
-  border:1px solid;
-  border-color: #ccc;
-  transition: border-color .15s ease-in-out 0s; 
-  -moz-box-align: center;
-    align-items: center;
-	text-align: center;
-	vertical-align: middle;
-    white-space: nowrap;
-		i {
-			margin: 0 auto; 
-			}		
-		&:first-child {
-  			border-right: none; 
-			}
-		&:last-child {
-			border-left: none; 
-			}
-  }
-  
-
-// Bootstrap3 Backward bcompatibility 
-.has-error {
-	.feedback {
-	color:darken($brand-danger, 3%);
-	}
-	.input-group-addon {
-	color: $brand-danger;
-    border-color: $brand-danger;
-    background-color: lighten($brand-danger, 40%);
-	}
-	
-.form-control {
-	border-color: $brand-danger;
-	}
-	
-	}
-.has-success {
-
-.feedback {
-	color:darken($brand-success, 17%);
-	}
-	
-.input-group-addon {
-	color: $brand-success;
-    border-color: $brand-success;
-    background-color: lighten($brand-success, 27%);
-	}
-	
-.form-control {
-	border-color: $brand-success;
+		flex: 1 1 auto;
 	}
 }
-	
-	
-	
+// adding icon
+.input-group-addon {
+	min-width: 38px;
+	background-color: transparent;
+	border: 1px solid;
+	border-color: #ccc;
+	transition: border-color 0.15s ease-in-out 0s;
+	-moz-box-align: center;
+	align-items: center;
+	text-align: center;
+	vertical-align: middle;
+	white-space: nowrap;
+	i {
+		margin: 0 auto;
+	}
+	&:first-child {
+		border-right: none;
+	}
+	&:last-child {
+		border-left: none;
+	}
+}
+
+// Bootstrap3 Backward bcompatibility
+.has-error {
+	.feedback {
+		color: darken($brand-danger, 3%);
+	}
+	.input-group-addon {
+		color: $brand-danger;
+		border-color: $brand-danger;
+		background-color: lighten($brand-danger, 40%);
+	}
+
+	.form-control {
+		border-color: $brand-danger;
+	}
+}
+.has-success {
+	.feedback {
+		color: darken($brand-success, 17%);
+	}
+
+	.input-group-addon {
+		color: $brand-success;
+		border-color: $brand-success;
+		background-color: lighten($brand-success, 27%);
+	}
+
+	.form-control {
+		border-color: $brand-success;
+	}
+}
+
 // file input style
 
 .file-attach input[type="file"] {
-    cursor: pointer;
-    height: 150%;
-    left: -25%;
-    opacity: 0;
-    position: absolute;
-    top: -25%;
-    width: 150%;
-    z-index: 10;
+	cursor: pointer;
+	height: 150%;
+	left: -25%;
+	opacity: 0;
+	position: absolute;
+	top: -25%;
+	width: 150%;
+	z-index: 10;
 }
 // radios / checkbox
 .form-check-inline {
 	display: inline-block;
-	position:relative;
+	position: relative;
 	cursor: pointer;
 }
 
 .form-check {
-	position:relative;
+	position: relative;
 	cursor: pointer;
-	}
+}
 .check-icon-radio {
 	backface-visibility: hidden;
-    position: absolute;
+	position: absolute;
 	left: 0;
-    top: 50%;
-    transform: translateY(-50%);
+	top: 50%;
+	transform: translateY(-50%);
 	width: 18px;
 	height: 18px;
 	font-size: 12px;
-  	color: $color-p2;
-	border:1px solid;
-  	border-color: $color-p2;
-  	border-radius: 50%;
+	color: $color-p2;
+	border: 1px solid;
+	border-color: $color-p2;
+	border-radius: 50%;
 	i {
 		border-radius: 50%;
 		height: 10px;
@@ -172,35 +166,34 @@ label, .form-control-label {
 		position: absolute;
 		top: 50%;
 		left: 50%;
-		  -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-		  
-		  &::before {
-			  content: attr(data-uncheck-icon);
-			  left: 50%;
-			  position: absolute;
-			  -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-			  }	
+		-webkit-transform: translate(-50%, -50%);
+		-ms-transform: translate(-50%, -50%);
+		transform: translate(-50%, -50%);
+
+		&::before {
+			content: attr(data-uncheck-icon);
+			left: 50%;
+			position: absolute;
+			-webkit-transform: translate(-50%, -50%);
+			-ms-transform: translate(-50%, -50%);
+			transform: translate(-50%, -50%);
+		}
 	}
-	
 }
 
 .check-icon-checkbox {
 	backface-visibility: hidden;
-    position: absolute;
+	position: absolute;
 	left: 0;
 	left: 0;
-    top: 50%;
-    transform: translateY(-50%);
+	top: 50%;
+	transform: translateY(-50%);
 	width: 18px;
 	height: 18px;
 	font-size: 12px;
-	color:$white;
-	border:1px solid;
-  	border-color: $color-p2;
+	color: $white;
+	border: 1px solid;
+	border-color: $color-p2;
 	i {
 		display: block;
 		height: 100%;
@@ -211,7 +204,7 @@ label, .form-control-label {
 		-ms-transform: translate(-50%, -50%);
 		transform: translate(-50%, -50%);
 		width: 100%;
-		 &::before {
+		&::before {
 			content: "\4e";
 			left: 50%;
 			top: 50%;
@@ -219,9 +212,9 @@ label, .form-control-label {
 			-webkit-transform: translate(-50%, -50%);
 			-ms-transform: translate(-50%, -50%);
 			transform: translate(-50%, -50%);
-			  }	
 		}
 	}
+}
 
 // Checked state background
 input[type="checkbox"]:checked + i,
@@ -229,60 +222,63 @@ input[type="radio"]:checked + i,
 input[type="checkbox"]:checked + * i,
 input[type="radio"]:checked + * i {
 	color: #fff;
-	background-color:  $color-p2;
-	border-color: $color-p2; 
-  }
-	
+	background-color: $color-p2;
+	border-color: $color-p2;
+}
 
 .bg-primary--checked.checked,
 .checked .bg-primary--checked {
-  background-color: $color-p2 !important; }
-  
-// custom select 
-  
-  .select {
-    border: 1px solid $input-border;
-    overflow: hidden; 
-    height: 40px;    
-    width: 100%;
-    position: relative;
-    display: block;
-	select {       
+	background-color: $color-p2 !important;
+}
+
+// custom select
+
+.select {
+	border: 1px solid $input-border;
+	overflow: hidden;
+	height: 40px;
+	width: 100%;
+	position: relative;
+	display: block;
+	select {
 		height: 40px;
-		border: 0;     
+		border: 0;
 		width: 100%;
-	   -webkit-appearance: none;
+		-webkit-appearance: none;
 		-moz-appearance: none;
 		appearance: none;
-		padding-left:10px;
+		padding-left: 10px;
 	}
 	&::after {
 		content: "\43";
-		font-family: 'CaGov';
+		font-family: "CaGov";
 		border-left: 1px solid $input-border;
 		padding: 8px 0px;
-		position: absolute; right: 0; top: 0;
+		position: absolute;
+		right: 0;
+		top: 0;
 		background: $white;
 		z-index: 3;
 		text-align: center;
 		width: 30px;
-		height: 100%;      
+		height: 100%;
 		pointer-events: none;
-		}
+	}
 }
 //removes clear x icon from the input fields in IE
 .form-control::-ms-clear {
-    display: none !important;
+	display: none !important;
 }
-input[type=text]::-ms-clear { display: none; }
-
+input[type="text"]::-ms-clear {
+	display: none;
+}
 
 // radio in form of button
 .check {
-    position: relative;
-    cursor: pointer;
-    border:1px solid #ccc;
-    min-width:100px;
+	position: relative;
+	cursor: pointer;
+	border: 1px solid #ccc;
+	min-width: 100px;
 }
 
 // radio and checkbox in form of button
@@ -291,59 +287,69 @@ input[type="checkbox"]:checked + .bg-primary--checked,
 input[type="radio"]:checked + .bg-primary--checked,
 input[type="checkbox"]:checked + * .bg-primary--checked,
 input[type="radio"]:checked + * .bg-primary--checked {
-  background-color: $color-p2; }
+	background-color: $color-p2;
+}
 
 /* highlight Color */
 input[type="checkbox"]:checked + .bg-highlight--checked,
 input[type="radio"]:checked + .bg-highlight--checked,
 input[type="checkbox"]:checked + * .bg-highlight--checked,
 input[type="radio"]:checked + * .bg-highlight--checked {
-  background-color: $color-p1; }
+	background-color: $color-p1;
+}
 
 /* White Color */
 input[type="checkbox"]:checked + .color-white--checked,
 input[type="radio"]:checked + .color-white--checked,
 input[type="checkbox"]:checked + * .color-white--checked,
 input[type="radio"]:checked + * .color-white--checked {
-  color: #fff !important; }
-  
-  
-/* Focusable custom checkboxes and radios for accessibility */
-input[type="checkbox"]:focus + div, input[type="radio"]:focus + div {
-        box-shadow: 0 0 2px 2px $color-s3;
-    }
-input[type="checkbox"]:focus + .btn, input[type="radio"]:focus + .btn {
-    @include outline(2px);
+	color: #fff !important;
 }
-	
-	
+
+/* Focusable custom checkboxes and radios for accessibility */
+input[type="checkbox"]:focus + div,
+input[type="radio"]:focus + div {
+	box-shadow: 0 0 2px 2px $color-s3;
+}
+input[type="checkbox"]:focus + .btn,
+input[type="radio"]:focus + .btn {
+	@include outline(2px);
+}
+
 .custom-radio {
-		.custom-control-input:checked ~ .custom-control-label::before {
+	.custom-control-input:checked ~ .custom-control-label::before {
 		@include gradient-bg($color-p2);
-	} 
-} 
-		
+	}
+}
+
 .custom-checkbox {
 	.custom-control-label::before {
 		border-radius: $border-radius-base;
-		}
-	
-		.custom-control-input:checked ~ .custom-control-label::before {
-  		@include gradient-bg($color-p2);
+	}
+
+	.custom-control-input:checked ~ .custom-control-label::before {
+		@include gradient-bg($color-p2);
 		border-radius: $border-radius-base;
 	}
 }
 
 .valid-feedback {
-    color: $brand-success;
+	color: $brand-success;
 }
 
 /* Accessibilty focus */
-input:focus, textarea:focus, button:focus, select:focus {
-    @include outline(2px);
+input:focus,
+textarea:focus,
+button:focus,
+select:focus {
+	@include outline(2px);
 }
 
 /* bootstrap 4.4.1 adjustments */
 .input-group > .form-control {
-    flex: 1 1 0% !important;
+	flex: 1 1 0% !important;
+}
+
+.form-group {
+	margin-bottom: 1rem;
 }
