--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -10308,7 +10308,7 @@ html {
    ICON FONTS - /source/scss/cagov/icon-font.scss
 ----------------------------------------- */
 @font-face {
-  font-family: 'CaGov';
+  font-family: "CaGov";
   src: url("../fonts/CaGov.eot?ocljyw");
   src: url("../fonts/CaGov.eot?ocljyw#iefix") format("embedded-opentype"), url("../fonts/CaGov.ttf?ocljyw") format("truetype"), url("../fonts/CaGov.woff?ocljyw") format("woff"), url("../fonts/CaGov.svg??ocljyw#CaGov") format("svg");
   font-weight: normal;
@@ -10316,9 +10316,10 @@ html {
   font-display: block;
 }
 
-[class^="ca-gov-icon-"], [class*=" ca-gov-icon-"] {
+[class^="ca-gov-icon-"],
+[class*=" ca-gov-icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'CaGov' !important;
+  font-family: "CaGov" !important;
   speak: never;
   font-style: normal;
   font-weight: normal;
@@ -10327,6 +10328,10 @@ html {
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.ca-gov-icon-pdf-text:before {
+  content: "\ea20";
 }
 
 .ca-gov-icon-mask-light:before {
