updated timeline component

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -23296,6 +23296,18 @@ html:not(.ie8) .stats-highlight img {
   font-weight: 700 !important;
 }
 
+.text-center {
+  text-align: center !important;
+}
+
+.text-left {
+  text-align: left !important;
+}
+
+.text-right {
+  text-align: right !important;
+}
+
 .link-icon {
   font-size: 0.7rem !important;
   position: relative;
