--- a/source/scss/cagov/globals.scss
+++ b/source/scss/cagov/globals.scss
@@ -886,6 +886,18 @@
     font-weight: 700 !important;
 }
 
+.text-center {
+    text-align: center !important;
+}
+
+.text-left {
+    text-align: left !important;
+}
+
+.text-right {
+    text-align: right !important;
+}
+
 // for external and anchor links icons
 .link-icon {
     font-size: 0.7rem !important;
