added number counter and parallax code

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -21810,6 +21810,14 @@ div[data-state="open"] .title {
 }
 
 /* -----------------------------------------
+   PRALLAX - /source/scss/cagov/parallax.scss
+----------------------------------------- */
+.parallax {
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* -----------------------------------------
    CAROUSEL - /source/scss/cagov/carousel.scss
 ----------------------------------------- */
 .carousel .carousel-control-prev:focus,
