--- a/source/scss/cagov.core.scss
+++ b/source/scss/cagov.core.scss
@@ -90,6 +90,7 @@
 @import "cagov/service-profile.scss";
 @import "cagov/service-group.scss";
 @import "cagov/number-counter.scss";
+@import "cagov/parallax.scss";
 @import "cagov/carousel.scss";
 @import "cagov/charts.scss";
 @import "cagov/filter-group.scss";
